# mgend

./: Cargo.toml  README.md  mgend_ontology.ttl
.github/workflows/: release.yml
src/: format.rs  main.rs  models.rs
src/format/: jsonld.rs  turtle.rs
src/models/: context.rs  hgnc.rs  input.rs  name_space.rs  output.rs
src/models/output/: case.rs  disease.rs  gene.rs  submission.rs  variant.rs
