[package]
name = "mgend-rdf"
version = "1.0.2"
edition = "2021"

[dependencies]
csv = "1.3.0"
flate2 = "1.0"
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
structopt = { version = "0.3", default-features = false }
strum = { version = "0.25", features = ["derive"] }
